--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "8.0.4",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.8.0",
     "heroicons": "^2.2.0",
+    "sharp": "^0.34.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@types/node": "^22.15.23",
+    "@types/node": "^22.15.24",
     "gh-pages": "^6.3.0",
     "typescript": "^5.8.3"
   }
